@@ -1,3 +1,14 @@
+2011-10-13 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* central_proxy/central_proxy.pl: Added a requeste cleaner function
+	and cleaned Via and X-Forwarded-For headers
+
+2011-10-05 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	*central_proxy/central_proxy.pl, central_proxy/ProxyLib.pm: Moved
+	functions connection_exit, connection_restart and connection_cleanup from
+	ProxyLib to central_proxy.
+
 2011-10-04 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* central_proxy/central_proxy.pl: Fixed a mistake with proxy authentication.
